ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncArrowFunction/asyncArrowFunction7_es5/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncArrowFunction/asyncArrowFunction7_es5/input.ts:7:24
  |
7 |   var foo = async (a = await): Promise<void> => {
  |                        ^^^^^

